# building_tools

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE.md  TODO  __init__.py  addon_updater.py  addon_updater_ops.py  building-tools.sublime-project  building-tools.sublime-workspace  cynthia_balcony.py  cynthia_door.py  cynthia_floor.py  cynthia_floorplan.py  cynthia_rails.py  cynthia_roof.py  cynthia_staircase.py  cynthia_stairs.py  cynthia_update.py  cynthia_window.py  make-dist.py  pyproject.toml  version.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
assets/: makethumbs.py
btools/: __init__.py
btools/api/: __init__.py  ai_generate.py  api.py  options.py  register.py
btools/building/: __init__.py  arch.py  array.py  custom.py  customobj.py  facemap.py  frame.py  generator.py  generic.py  (+7 more)
btools_tests/: __main__.py  test_utils.py  tools.py
core/: __init__.py  arch.py  building.py  frame.py  generic.py  generic_props.py  material.py  railing.py  register.py  update.py
docs/: CNAME  Gemfile  _config.yml  index.md
scripts/: install-dev-addon.py  make-release.py
tests/: __init__.py  __main__.py  generic.py  register.py  test.blend  test_cynthia.py  test_door.py  test_floorplan.py  test_floors.py  test_railing.py  test_utils.py  test_window.py  tools.py
utils/: __init__.py  devtools.py  util_common.py  util_cynthia.py  util_general.py  util_geometry.py  util_logging.py  util_material.py  util_mesh.py  util_object.py  util_rail.py  util_skeleton.py  util_straight_skeleton.py
(+174 files in other folders)
