[project]
name = "BuildingTools"
version = "1.0.10"
description = "Crazy fast way to model buildings in Blender"
authors = [
    {name = "ranjian0", email = "karanjaichungwa@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.8",
    "fake-bpy-module-latest>=20231217",
]
dev = [
    "numpy>=1.26.2",
    "debugpy>=1.8.1",
]


[tool.pdm.scripts]
test = {cmd = "blender --window-geometry 0 0 1 1 --no-window-focus -P tests/__main__.py"}
build = {cmd = "python scripts/make-release.py"}
build-dev = {cmd = "python scripts/make-release.py latest"}
install-dev = {cmd = "blender -P scripts/install-dev-addon.py"}
dev = {composite = ["build-dev", "install-dev"]}
format = {cmd = "black btools"}
check = {cmd = "mypy btools"}